feat: add readme

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -56,11 +56,9 @@
       "aside main main"
       "aside main main"
     ;
-    // grid-template-columns: minmax(min-content, 39.4rem) minmax(min-content, 96.2rem);
-    // grid-template-columns: 42rem 1fr; // correct
 
     grid-template-columns: auto 1fr; // auto потому что transition не работает на grid-template-columns/rows
-    gap: 3.6rem; // correct
+    gap: 3.6rem;
 
     &>*:first-child {
       grid-area: aside;
