--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -4,7 +4,7 @@
   border: 0;
 }
 
-*, 
+*,
 *:before,
 *::after {
   -moz-box-sizing: border-box;
@@ -26,6 +26,15 @@ body {
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 
+}
+
+a {
+  color: inherit;
+}
+
+input {
+  outline: none;
+  border: none;
 }
 
 input::-ms-clear {
@@ -55,13 +64,17 @@ ul li {
 }
 
 img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  flex-shrink: 0;
   vertical-align: top;
 }
 
-h1, 
-h2, 
-h3, 
-h4, 
+h1,
+h2,
+h3,
+h4,
 h5,
 h6 {
   font-weight: inherit;
